# qbvisor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  dev.ps1  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  operational.yml  pages.yml  release.yml
docs/: README.md  application-building.md  backups-and-attachments.md  compatibility-helpers.md  configuration.md  data-workflows.md  declarative-schemas.md  development-workloads.md  index.md  logging-and-errors.md  operational-testing.md  release-policy.md  releasing.md  upgrading-to-0.3.md
docs/api/: README.md  quickbase-oas-manifest.json
docs/reference/: backups.md  client.md  exceptions.md  index.md  logging.md  queries.md  schemas.md  transport.md
docs/releases/: 0.3.0.md
modules/: __init__.py  client.py  helpers.py  log_runner.py  metadata.py  query_helper.py  transport.py
scripts/: audit_quickbase_oas.py  verify_distribution.py  verify_docs.py
src/pyqb_client/: __init__.py  client.py  log_runner.py  query_helper.py  query_value.py  transport.py
src/qbvisor/: __init__.py  _attachments.py  _pagination.py  _version.py  async_transport.py  backup.py  client.py  exceptions.py  helpers.py  log_runner.py  metadata.py  models.py  query_helper.py  query_value.py  schema.py  transport.py
src/qbvisor/_backup/: __init__.py  attachments.py  reader.py  records.py  schema.py  workflow.py  workspace.py
src/qbvisor/_records/: __init__.py  pagination.py  upsert.py
src/qbvisor/_resources/: __init__.py  apps.py  base.py  fields.py  relationships.py  tables.py
src/qbvisor/_schema/: __init__.py  apply.py  dependencies.py  planner.py  relationship_apply.py  state.py
tests/: test_async_transport.py  test_attachments.py  test_backup_attachments.py  test_backup_models.py  test_backup_records.py  test_backup_schema.py  test_backup_workflow.py  test_client_compatibility.py  test_client_facade.py  test_compatibility_helpers.py  test_exceptions.py  test_metadata.py  test_models.py  test_oas_audit.py  test_pagination.py  test_public_api.py  test_query_helper.py  test_query_value.py  test_record_pagination.py  test_release_validation.py  test_resource_contracts.py  test_schema_apply.py  test_schema_models.py  test_schema_planner.py  test_schema_relationship_apply.py  test_transport.py  test_upsert_batches.py
tests/integration/: conftest.py  operational_support.py  test_operational_integration.py  test_operational_support.py  test_sandbox_contract.py  test_sandbox_preflight.py  test_schema_integration.py  test_transport_integration.py  test_workload_integration.py  test_workload_support.py  workload_support.py
tests/typing/: installed_package.py
