[project]
name = "qbvisor"
version = "0.2.0"
description = "Quickbase Python client with async transport, logging, and data processing utilities."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
authors = [
    { name = "Chris Metcalf", email = "christopher.e.metcalf@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiofiles>=23.2",
    "aiohttp>=3.9",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pandas-stubs>=2.2",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "types-aiofiles>=24.1",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qbvisor"]
