[project]
name = "qbvisor"
version = "0.3.0"
description = "Developer-focused Python SDK for building, querying, moving, and backing up Quickbase applications."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Chris Metcalf", email = "christopher.e.metcalf@gmail.com" },
]
keywords = ["api", "automation", "backup", "quickbase", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=23.2",
    "aiohttp>=3.9",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.urls]
Changelog = "https://github.com/ChrisEMetcalf/qbvisor/blob/main/CHANGELOG.md"
Documentation = "https://chrisemetcalf.github.io/qbvisor/"
Issues = "https://github.com/ChrisEMetcalf/qbvisor/issues"
Repository = "https://github.com/ChrisEMetcalf/qbvisor"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.6",
    "mypy>=1.14",
    "pandas-stubs>=2.2",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "twine>=6.2",
    "types-aiofiles>=24.1",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qbvisor"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/qbvisor/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=qbvisor",
    "--cov-report=term-missing",
    "--cov-fail-under=40",
]
markers = [
    "integration: live contract tests against the configured persistent Quickbase sandbox",
    "operational: scheduled and release-candidate smoke tests against the dedicated sandbox",
    "sandbox_mutation: explicitly opted-in tests that mutate only the dedicated sandbox",
    "workload: bounded generated-record volume with a whole-application backup and explicit opt-in",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = ".coverage.nosync"
source = ["qbvisor"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
